[work/authorization] add user to redirection

--- a/src/main/webapp/i18n/de/redirection.json
+++ b/src/main/webapp/i18n/de/redirection.json
@@ -23,6 +23,7 @@
       "creation": "Creation",
       "startDate": "Start Date",
       "endDate": "End Date",
+      "user": "User",
       "qrCode": "Qr Code"
     }
   }
