[work/qr-codes-display] qr code display

--- a/src/main/webapp/i18n/de/qr-codes.json
+++ b/src/main/webapp/i18n/de/qr-codes.json
@@ -5,6 +5,8 @@
     "currentRedirection": "Aktuelle Weiterleitung",
     "newRedirection": "Neue Weiterleitung",
     "enable": "Aktivieren",
-    "download": "Herunterladen"
+    "download": "Herunterladen",
+    "add": "Hinzufügen",
+    "delete": "Löschen"
   }
 }
