[work/qr-codes-display] add qr code modal

--- a/src/main/webapp/i18n/de/qr-codes.json
+++ b/src/main/webapp/i18n/de/qr-codes.json
@@ -7,6 +7,7 @@
     "enable": "Aktivieren",
     "download": "Herunterladen",
     "add": "Hinzufügen",
-    "delete": "Löschen"
+    "delete": "Löschen",
+    "addQrCode": "Qr Code hinzufügen"
   }
 }
