--- a/src/main/webapp/i18n/en/qr-codes.json
+++ b/src/main/webapp/i18n/en/qr-codes.json
@@ -7,6 +7,7 @@
     "enable": "Enable",
     "download": "Download",
     "add": "Add",
-    "delete": "Delete"
+    "delete": "Delete",
+    "addQrCode": "Add Qr Code"
   }
 }
