[work/qr-codes-display] add function

--- a/src/main/webapp/i18n/de/qr-codes.json
+++ b/src/main/webapp/i18n/de/qr-codes.json
@@ -8,6 +8,9 @@
     "download": "Herunterladen",
     "add": "Hinzufügen",
     "delete": "Löschen",
-    "addQrCode": "Qr Code hinzufügen"
+    "addQrCode": "Qr Code hinzufügen",
+    "errors": {
+      "couldNotCreate": "Fehler beim Erstellen des Qr Codes"
+    }
   }
 }
