[work/qr-codes-display] update redirection modal

--- a/src/main/webapp/i18n/de/qr-codes.json
+++ b/src/main/webapp/i18n/de/qr-codes.json
@@ -9,6 +9,7 @@
     "add": "Hinzufügen",
     "delete": "Löschen",
     "addQrCode": "Qr Code hinzufügen",
+    "updateRedirection": "Update Redirection",
     "errors": {
       "couldNotCreate": "Fehler beim Erstellen des Qr Codes"
     }
