--- a/src/main/webapp/i18n/en/qr-codes.json
+++ b/src/main/webapp/i18n/en/qr-codes.json
@@ -9,6 +9,7 @@
     "add": "Add",
     "delete": "Delete",
     "addQrCode": "Add Qr Code",
+    "updateRedirection": "Update Redirection",
     "errors": {
       "couldNotCreate": "Error creating new Qr Code"
     }
