[work/qr-codes-display] improve layout

--- a/src/main/webapp/i18n/de/qr-codes.json
+++ b/src/main/webapp/i18n/de/qr-codes.json
@@ -5,8 +5,8 @@
     "currentRedirection": "Aktuelle Weiterleitung",
     "newRedirection": "Neue Weiterleitung",
     "enable": "Aktivieren",
-    "download": "Herunterladen",
-    "add": "Hinzufügen",
+    "download": "QR Code Herunterladen",
+    "add": "Qr Code Hinzufügen",
     "delete": "Löschen",
     "addQrCode": "Qr Code hinzufügen",
     "updateRedirection": "Update Redirection",
