--- a/src/main/webapp/i18n/en/qr-codes.json
+++ b/src/main/webapp/i18n/en/qr-codes.json
@@ -5,8 +5,8 @@
     "currentRedirection": "Current Redirection",
     "newRedirection": "New Redirection",
     "enable": "Enable",
-    "download": "Download",
-    "add": "Add",
+    "download": "Download QR Code",
+    "add": "Add QR Code",
     "delete": "Delete",
     "addQrCode": "Add Qr Code",
     "updateRedirection": "Update Redirection",
