--- a/src/main/webapp/i18n/de/home.json
+++ b/src/main/webapp/i18n/de/home.json
@@ -1,7 +1,7 @@
 {
   "home": {
-    "title": "Willkommen, Java Hipster!",
-    "subtitle": "Dies ist Ihre Hauptseite",
+    "title": "Willkommen zu Fluid QR von [bild:werk] Medien",
+    "subtitle": "Diese Anwendung befindet sich gerade in der Entwicklung",
     "logged": {
       "message": "Sie sind als Benutzer \"{{username}}\" angemeldet."
     },
