--- a/src/main/webapp/i18n/de/home.json
+++ b/src/main/webapp/i18n/de/home.json
@@ -1,6 +1,6 @@
 {
   "home": {
-    "title": "Willkommen zu Fluid QR von [bild:werk] Medien",
+    "title": "Willkommen zu Fluid QR von [bild:werk] medien",
     "subtitle": "Diese Anwendung befindet sich gerade in der Entwicklung",
     "logged": {
       "message": "Sie sind als Benutzer \"{{username}}\" angemeldet."
