--- a/src/main/webapp/i18n/en/home.json
+++ b/src/main/webapp/i18n/en/home.json
@@ -1,6 +1,6 @@
 {
   "home": {
-    "title": "Welcome to Fluid QR by [bild:werk] Medien!",
+    "title": "Welcome to Fluid QR by [bild:werk] medien!",
     "subtitle": "This tool is currently under construction",
     "logged": {
       "message": "You are logged in as user \"{{username}}\"."
