[work/redirection-update] footer with donation button

--- a/src/main/webapp/i18n/de/global.json
+++ b/src/main/webapp/i18n/de/global.json
@@ -137,5 +137,11 @@
       "could.not.extract": "Could not extract file",
       "not.image": "File was expected to be an image but was found to be \"{{ fileType }}\""
     }
+  },
+  "footer": {
+    "donationText": "Diese Plattform lebt von Deiner Unterstützung!",
+    "donateNow": "Jetzt Spenden",
+    "dataPrivacy": "Datenschutz",
+    "imprint": "Impressum"
   }
 }
