--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -138,5 +138,11 @@
       "could.not.extract": "Could not extract file",
       "not.image": "File was expected to be an image but was found to be \"{{ fileType }}\""
     }
+  },
+  "footer": {
+    "donationText": "This platform lives on your support!",
+    "donateNow": "Donate Now",
+    "dataPrivacy": "Data Privacy",
+    "imprint": "Imprint"
   }
 }
