--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -140,7 +140,7 @@
     }
   },
   "footer": {
-    "donationText": "This platform lives on your support!",
+    "donationText": "This platform is based on your support!",
     "donateNow": "Donate Now",
     "dataPrivacy": "Data Privacy",
     "imprint": "Imprint"
