[work/redirection-update] add redirection to qr code creation

--- a/src/main/webapp/i18n/de/qr-codes.json
+++ b/src/main/webapp/i18n/de/qr-codes.json
@@ -2,6 +2,7 @@
   "qr-codes": {
     "title": "[de] Qr Codes",
     "publicUrl": "Öffentliche URL",
+    "redirection": "Weiterleitung",
     "currentRedirection": "Aktuelle Weiterleitung",
     "newRedirection": "Neue Weiterleitung",
     "enable": "Aktivieren",
