--- a/src/main/webapp/i18n/en/qr-codes.json
+++ b/src/main/webapp/i18n/en/qr-codes.json
@@ -2,6 +2,7 @@
   "qr-codes": {
     "title": "Qr Codes",
     "publicUrl": "Public URL",
+    "redirection": "Redirection",
     "currentRedirection": "Current Redirection",
     "newRedirection": "New Redirection",
     "enable": "Enable",
