--- a/src/main/webapp/i18n/de/home.json
+++ b/src/main/webapp/i18n/de/home.json
@@ -1,7 +1,8 @@
 {
   "home": {
+    "brand": "Fluid QR by [bild:werk] medien",
     "title": "Willkommen zu Fluid QR von [bild:werk] medien",
-    "subtitle": "Diese Anwendung befindet sich gerade in der Entwicklung",
+    "subtitle": "Das Tool zur Erstellung von dynamischen Links und QR Codes.",
     "logged": {
       "message": "Sie sind als Benutzer \"{{username}}\" angemeldet."
     },
