--- a/src/main/webapp/i18n/en/home.json
+++ b/src/main/webapp/i18n/en/home.json
@@ -1,7 +1,8 @@
 {
   "home": {
+    "brand": "Fluid QR by [bild:werk] medien",
     "title": "Welcome to Fluid QR by [bild:werk] medien!",
-    "subtitle": "This tool is currently under construction",
+    "subtitle": "A tool for creating dynamic links and QR codes.",
     "logged": {
       "message": "You are logged in as user \"{{username}}\"."
     },
