--- a/src/main/webapp/i18n/de/home.json
+++ b/src/main/webapp/i18n/de/home.json
@@ -1,20 +1,14 @@
 {
   "home": {
-    "brand": "Fluid QR by [bild:werk] medien",
+    "brand": "Fluid QR von [bild:werk] medien",
     "title": "Willkommen zu Fluid QR von [bild:werk] medien",
     "subtitle": "Das Tool zur Erstellung von dynamischen Links und QR Codes.",
     "logged": {
       "message": "Sie sind als Benutzer \"{{username}}\" angemeldet."
     },
-    "question": "Wenn Sie Fragen zu JHipster haben:",
-    "link": {
-      "homepage": "JHipster Hauptseite",
-      "stackoverflow": "JHipster auf Stack Overflow",
-      "bugtracker": "JHipster Fehlereinträge",
-      "chat": "JHipster Chat",
-      "follow": "kontaktieren Sie uns mit @jhipster auf Twitter"
-    },
-    "like": "Wenn Sie JHipster mögen, vergessen Sie nicht uns einen Stern zu geben auf",
-    "github": "GitHub"
+    "info": "Die Fluid QR Platform ermöglicht die Erstellung eines beständigen und leicht lesbaren Links, der auf einen anderen Link verweist. Die mit Fluid QR erstellten Links können bedenkenlos verbreitet werden, ohne dass eine Korrektur bei Änderung des ursprünglichen Links kommuniziert werden muss. Die Anpassung des Verweises erfolgt dynamisch im Hintergrund über die Fluid QR Plattform. Zu jedem Fluid QR Link wird ein QR Code zum Herunterladen bereitgestellt.",
+    "button": {
+      "letsGo": "Los geht's"
+    }
   }
 }
