--- a/src/main/webapp/i18n/de/home.json
+++ b/src/main/webapp/i18n/de/home.json
@@ -6,7 +6,7 @@
     "logged": {
       "message": "Sie sind als Benutzer \"{{username}}\" angemeldet."
     },
-    "info": "Die Fluid QR Platform ermöglicht die Erstellung eines beständigen und leicht lesbaren Links, der auf einen anderen Link verweist. Die mit Fluid QR erstellten Links können bedenkenlos verbreitet werden, ohne dass eine Korrektur bei Änderung des ursprünglichen Links kommuniziert werden muss. Die Anpassung des Verweises erfolgt dynamisch im Hintergrund über die Fluid QR Plattform. Zu jedem Fluid QR Link wird ein QR Code zum Herunterladen bereitgestellt.",
+    "info": "Die Fluid QR Plattform ermöglicht die Erstellung eines beständigen und leicht lesbaren Links, der auf einen anderen Link verweist. Die mit Fluid QR erstellten Links können bedenkenlos verbreitet werden, ohne dass eine Korrektur bei Änderung des ursprünglichen Links kommuniziert werden muss. Die Anpassung des Verweises erfolgt dynamisch im Hintergrund über die Fluid QR Plattform. Zu jedem Fluid QR Link wird ein QR Code zum Herunterladen bereitgestellt.",
     "button": {
       "letsGo": "Los geht's"
     }
