--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -5,17 +5,17 @@ error.status=Status:
 error.message=Message:
 
 # Activation email
-email.activation.title=FluidQrServer account activation is required
+email.activation.title=Fluid QR by [bild:werk] medien account activation
 email.activation.greeting=Dear {0}
-email.activation.text1=Your FluidQrServer account has been created, please click on the URL below to activate it:
-email.activation.text2=Regards,
-email.signature=FluidQrServer Team.
+email.activation.text1=your Fluid QR account has been created, please click on the URL below to activate it:
+email.activation.text2=Best Regards
+email.signature=Fluid QR by [bild:werk] medien Team
 
 # Creation email
-email.creation.text1=Your FluidQrServer account has been created, please click on the URL below to access it:
+email.creation.text1=Your Fluid QR account has been created, please click on the URL below to access it:
 
 # Reset email
-email.reset.title=FluidQrServer password reset
+email.reset.title=Fluid QR by [bild:werk] medien password reset
 email.reset.greeting=Dear {0}
-email.reset.text1=For your FluidQrServer account a password reset was requested, please click on the URL below to reset it:
-email.reset.text2=Regards,
+email.reset.text1=for your Fluid QR account a password reset was requested, please click on the URL below to reset it:
+email.reset.text2=Best Regards
