--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -5,17 +5,17 @@ error.status=Status:
 error.message=Meldung:
 
 # Activation email
-email.activation.title=FluidQrServer Aktivierung
+email.activation.title=Fluid QR by [bild:werk] medien Aktivierung
 email.activation.greeting=Liebe(r) {0}
-email.activation.text1=Ihr FluidQrServer Zugang wurde angelegt, bitte klicken Sie unten auf den Link, um diesen zu aktivieren:
-email.activation.text2=GrÃ¼ÃŸe,
-email.signature=FluidQrServer.
+email.activation.text1=Ihr Fluid QR Zugang wurde angelegt, bitte klicken Sie unten auf den Link, um diesen zu aktivieren:
+email.activation.text2=Viele Grüße,
+email.signature=Fluid QR by [bild:werk] medien Team
 
 # Creation email
-email.creation.text1=Ihr FluidQrServer Zugang wurde angelegt, bitte klicken Sie auf den Link um sich anzumelden:
+email.creation.text1=Ihr Fluid QR Zugang wurde angelegt, bitte klicken Sie auf den Link um sich anzumelden:
 
 # Reset email
-email.reset.title=FluidQrServer Passwort zurÃ¼cksetzen
+email.reset.title=Fluid QR by [bild:werk] medien Passwort zurücksetzen
 email.reset.greeting=Liebe(r) {0}
-email.reset.text1=FÃ¼r Ihren FluidQrServer Account wurde ein neues Passwort angefordert, bitte klicken Sie unten auf den Link, um das Passwort zurÃ¼ckzusetzen:
-email.reset.text2=GrÃ¼ÃŸe,
+email.reset.text1=Für Ihren Fluid QR Account wurde ein neues Passwort angefordert, bitte klicken Sie unten auf den Link, um das Passwort zurückzusetzen:
+email.reset.text2=Viele Grüße
