optimize for mobile

--- a/src/main/webapp/i18n/en/qr-codes.json
+++ b/src/main/webapp/i18n/en/qr-codes.json
@@ -7,6 +7,7 @@
     "newRedirection": "New Redirection",
     "enable": "Enable",
     "download": "Download",
+    "show": "QR Code",
     "add": "Add New",
     "delete": "Delete",
     "confirmDelete": "Yes, Delete",
