--- a/src/main/webapp/i18n/de/qr-codes.json
+++ b/src/main/webapp/i18n/de/qr-codes.json
@@ -7,6 +7,7 @@
     "newRedirection": "Neue Weiterleitung",
     "enable": "Aktivieren",
     "download": "Herunterladen",
+    "show": "QR Code",
     "add": "Hinzufügen",
     "delete": "Löschen",
     "confirmDelete": "Ja, Löschen",
