--- a/src/main/webapp/i18n/de/qr-codes.json
+++ b/src/main/webapp/i18n/de/qr-codes.json
@@ -1,6 +1,6 @@
 {
   "qr-codes": {
-    "title": "[de] Qr Codes",
+    "title": "Qr Codes",
     "publicUrl": "Öffentliche URL",
     "redirection": "Weiterleitung",
     "currentRedirection": "Aktuelle Weiterleitung",
