[simple-youtube-integration] add google user

--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -10,6 +10,7 @@
         "main": "Entities",
         "redirection": "Redirection",
         "qrCode": "Qr Code",
+        "googleUser": "Google User",
         "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
       },
       "account": {
