[upgrade] rework qr code overview

--- a/src/main/webapp/i18n/en/qrCode.json
+++ b/src/main/webapp/i18n/en/qrCode.json
@@ -20,7 +20,9 @@
       "id": "ID",
       "code": "Code",
       "redirection": "Redirection",
-      "user": "User"
+      "user": "User",
+      "redirectionTarget": "Redirection Target",
+      "linkToShare": "Link to share"
     }
   }
 }
